initialize mongo db and mongoose connection. Create poem schema structure. Create seed script.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "build-dev": "vue-cli-service build --mode development",
-    "server":"nodemon server/index.js",
+    "server": "nodemon server/index.js",
+    "seed": "node server/config/seed.js",
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit"
   },
@@ -14,6 +15,7 @@
     "body-parser": "^1.19.0",
     "core-js": "^2.6.5",
     "express": "^4.17.1",
+    "mongoose": "^5.7.0",
     "vue": "^2.6.10"
   },
   "devDependencies": {
