--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.19.0",
     "core-js": "^2.6.5",
     "express": "^4.17.1",
+    "moment": "^2.24.0",
     "mongoose": "^5.7.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3"
